# ubus_test_client

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client  cmake_install.cmake
include/: ubus_client.h
src/: client.c  ubus_client.c
